feat: implement api delete and add movie to watchlist
